[gd_scene load_steps=8 format=3 uid="uid://mv20ndglt1iu"]

[ext_resource type="Script" uid="uid://cau6j0o0julfq" path="res://addons/godot_state_charts/state_chart.gd" id="1_lfyqp"]
[ext_resource type="Script" uid="uid://cxr1omreq1huq" path="res://BouncingBalls/bouncing_ball_sc.gd" id="1_tgkp6"]
[ext_resource type="Script" uid="uid://dtlmgewt76wtf" path="res://addons/godot_state_charts/parallel_state.gd" id="2_tgkp6"]
[ext_resource type="Script" uid="uid://bou0yn8lpwcuh" path="res://addons/godot_state_charts/compound_state.gd" id="3_gbv8n"]
[ext_resource type="Script" uid="uid://dyiggrr357tov" path="res://addons/godot_state_charts/atomic_state.gd" id="4_mwe3m"]
[ext_resource type="Script" uid="uid://m8bym6l05tkl" path="res://addons/godot_state_charts/transition.gd" id="6_gbv8n"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ala5b"]
radius = 36.0

[node name="BouncingBallSC" type="CharacterBody2D"]
input_pickable = true
script = ExtResource("1_tgkp6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ala5b")

[node name="StateChart" type="Node" parent="."]
script = ExtResource("1_lfyqp")
metadata/_custom_type_script = "uid://cau6j0o0julfq"

[node name="ParallelState" type="Node" parent="StateChart"]
script = ExtResource("2_tgkp6")
metadata/_custom_type_script = "uid://dtlmgewt76wtf"

[node name="Lifespan" type="Node" parent="StateChart/ParallelState"]
script = ExtResource("3_gbv8n")
initial_state = NodePath("Birth")
metadata/_custom_type_script = "uid://bou0yn8lpwcuh"

[node name="Birth" type="Node" parent="StateChart/ParallelState/Lifespan"]
script = ExtResource("4_mwe3m")
metadata/_custom_type_script = "uid://dyiggrr357tov"

[node name="destroy_ball" type="Node" parent="StateChart/ParallelState/Lifespan/Birth"]
script = ExtResource("6_gbv8n")
to = NodePath("../../Death")
event = &"destroy_ball"
delay_in_seconds = "0.0"

[node name="Death" type="Node" parent="StateChart/ParallelState/Lifespan"]
script = ExtResource("4_mwe3m")
metadata/_custom_type_script = "uid://dyiggrr357tov"

[node name="Modes" type="Node" parent="StateChart/ParallelState"]
script = ExtResource("3_gbv8n")
initial_state = NodePath("Bouncing")
metadata/_custom_type_script = "uid://bou0yn8lpwcuh"

[node name="Bouncing" type="Node" parent="StateChart/ParallelState/Modes"]
script = ExtResource("4_mwe3m")
metadata/_custom_type_script = "uid://dyiggrr357tov"

[node name="to_selected" type="Node" parent="StateChart/ParallelState/Modes/Bouncing"]
script = ExtResource("6_gbv8n")
to = NodePath("../../Selected")
event = &"left_press"
delay_in_seconds = "0.0"

[node name="Dragging" type="Node" parent="StateChart/ParallelState/Modes"]
script = ExtResource("4_mwe3m")
metadata/_custom_type_script = "uid://dyiggrr357tov"

[node name="to_bouncing" type="Node" parent="StateChart/ParallelState/Modes/Dragging"]
script = ExtResource("6_gbv8n")
to = NodePath("../../Bouncing")
event = &"left_release"
delay_in_seconds = "0.0"

[node name="Selected" type="Node" parent="StateChart/ParallelState/Modes"]
script = ExtResource("4_mwe3m")
metadata/_custom_type_script = "uid://dyiggrr357tov"

[node name="to_dragging" type="Node" parent="StateChart/ParallelState/Modes/Selected"]
script = ExtResource("6_gbv8n")
to = NodePath("../../Dragging")
event = &"left_press"
delay_in_seconds = "0.0"

[node name="MouseInteraction" type="Node" parent="StateChart/ParallelState"]
script = ExtResource("3_gbv8n")
initial_state = NodePath("MouseOutside")
metadata/_custom_type_script = "uid://bou0yn8lpwcuh"

[node name="MouseOutside" type="Node" parent="StateChart/ParallelState/MouseInteraction"]
script = ExtResource("4_mwe3m")
metadata/_custom_type_script = "uid://dyiggrr357tov"

[node name="mouse_enters" type="Node" parent="StateChart/ParallelState/MouseInteraction/MouseOutside"]
script = ExtResource("6_gbv8n")
to = NodePath("../../MouseInside")
event = &"mouse_entered"
delay_in_seconds = "0.0"

[node name="MouseInside" type="Node" parent="StateChart/ParallelState/MouseInteraction"]
script = ExtResource("4_mwe3m")
metadata/_custom_type_script = "uid://dyiggrr357tov"

[node name="mouse_exits" type="Node" parent="StateChart/ParallelState/MouseInteraction/MouseInside"]
script = ExtResource("6_gbv8n")
to = NodePath("../../MouseOutside")
event = &"mouse_exited"
delay_in_seconds = "0.0"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="state_entered" from="StateChart/ParallelState/Lifespan/Birth" to="." method="_on_birth_state_entered"]
[connection signal="state_entered" from="StateChart/ParallelState/Lifespan/Death" to="." method="_on_death_state_entered"]
[connection signal="state_entered" from="StateChart/ParallelState/Modes/Bouncing" to="." method="_on_bouncing_state_entered"]
[connection signal="state_processing" from="StateChart/ParallelState/Modes/Bouncing" to="." method="_on_bouncing_state_processing"]
[connection signal="state_entered" from="StateChart/ParallelState/Modes/Dragging" to="." method="_on_dragging_state_entered"]
[connection signal="state_processing" from="StateChart/ParallelState/Modes/Dragging" to="." method="_on_dragging_state_processing"]
[connection signal="state_entered" from="StateChart/ParallelState/Modes/Selected" to="." method="_on_selected_state_entered"]
[connection signal="state_physics_processing" from="StateChart/ParallelState/Modes/Selected" to="." method="_on_selected_state_physics_processing"]
[connection signal="state_processing" from="StateChart/ParallelState/MouseInteraction/MouseOutside" to="." method="_on_mouse_outside_state_processing"]
[connection signal="state_processing" from="StateChart/ParallelState/MouseInteraction/MouseInside" to="." method="_on_mouse_inside_state_processing"]
